# interview

./: .gitignore  README.md  pyproject.toml  requirements.txt
common/: base_schema.py
common/error/: __init__.py  base.py  exceptions.py  override.py
config/: asgi.py  settings.py  urls.py  wsgi.py
student/: api.py  authenticators.py  models.py  schemas.py
student/dal/: action.py
